<resources>
    <string name="app_name">Escope</string>
    <string name="action_settings">Add user</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="home">Home</string>
    <string name="News">News</string>
    <string name="open_drawer">Drawer Open</string>
    <string name="close_drawer">Drawer Close</string>
    <string name="demandes_prompt">type demande</string>
    <string-array name="array_demandes">
        <item>type demande</item>
        <item>Certficat de naissance</item>
        <item>Acte de décés</item>
    </string-array>
    <string-array name="array_reclamation">
        <item>eau</item>
        <item>parc et espaces vert</item>
        <item>electricité</item>
        <item>poubelle</item>
        <item>rue</item>
    </string-array>
    <string-array name="Gender_array">
        <item>Female</item>
        <item>Male</item>
        <item>Other</item>
    </string-array>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="about_us">About Us</string>
    <string name="sims">Sim\'s</string>
    <string name="sims_pres">Sim\'s is a startup founded by 4 Tunisian students based on the third sustainable development goals.</string>
    <string name="escope">Escope</string>
    <string name="escope_pres">Escope with improve healthcarein Tunisia and scpecially in rural areas ny giving people an instant and efficiant infectieuse diseases diagnosis. </string>
    <string name="order_id_mock" translatable="false"># 1234–5678</string>
    <string name="price_mock" translatable="false">$25</string>
    <string name="requests_count_mock" translatable="false">2</string>
    <string name="Analytics_number" translatable="false">Analytics N°</string>
    <string name="weight_mock" translatable="false">90 KG</string>
    <string name="weight_badge" translatable="false">WEIGHT</string>
    <string name="last_analytics" translatable="false">16/02/2018</string>
    <string name="last_analytics_date" translatable="false">Last Analaytics</string>
    <string name="sender_badge" translatable="false">SENDER</string>
    <string name="client_name_mock" translatable="false">Edward Norton</string>
    <string name="rating_mock" translatable="false">(26)</string>
    <string name="from_badge" translatable="false">FROM</string>
    <string name="to_badge" translatable="false">TO</string>
    <string name="delivery_date_badge" translatable="false">DELIVERY DATE</string>
    <string name="delivery_time_mock" translatable="false">6:30 pm</string>
    <string name="delivery_date_mock" translatable="false">May 16, 2016</string>
    <string name="deadline_badge" translatable="false">REQUEST DEADLINE</string>
    <string name="deadline_time_mock" translatable="false">24 minutes</string>
    <string name="request_btn_text" translatable="false">Analysis List</string>
    <string name="btn_annotation_mock" translatable="false">5 people have sent a request</string>
    <string name="content_from1_mock">W 90th St</string>
    <string name="content_from2_mock">New York, NY 10025</string>
    <string name="content_to1_mock">46th Ave</string>
    <string name="content_to2_mock">Woodside, NY 11101</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string-array name="medicalProblems">
        <item>Leishmaniose</item>
        <item>Malaria</item>
        <item>Paludisme</item>

    </string-array>
    <string name="feverNuberol"></string>
    <string name="feverAspirin">Aspirin</string>
    <string name="feverActironCF">Actiron CF</string>
    <string name="feverAcetaminophen">Acetaminophen</string>
    <string name="feverPanadol">Panadol</string>
    <string name="headacheProthiaden">Prothiaden</string>
    <string name="headacheDisprin">Disprin</string>
    <string name="headacheParacetamol">Paracetamol</string>
    <string name="headacheZolmitriptan">Zolmitriptan</string>
    <string name="headacheNaproxen">Naproxen</string>
    <string name="coldAndCoughLeflox">Leflox</string>
    <string name="coldAndCoughCodeine">Codeine</string>
    <string name="coldAndCoughArinac">Arinac</string>
    <string name="coldAndCoughDextromethorphan">Dextromethorphan</string>
    <string name="coldAndCoughNoscapine">Noscapine</string>
    <string name="vomitingDronabinol">Dronabinol</string>
    <string name="vomitingAprepitant">Aprepitant</string>
    <string name="vomitingDexamethasone">Dexamethasone</string>
    <string name="vomitingNabilone">Nabilone</string>
    <string name="vomitingDroperidol">Droperidol</string>
    <string name="constipationBuscopan">Buscopan</string>
    <string name="constipationLactulose">Lactulose</string>
    <string name="constipationGlucomannan">Glucomannan</string>
    <string name="constipationBisacodyl">Bisacodyl</string>
    <string name="constipationLomotil">Lomotil</string>
    <string name="bloodPressureLisinopril">Lisinopril</string>
    <string name="bloodPressureAtenolol">Atenolol</string>
    <string name="bloodPressureActrapidPenfill">ACTRAPID PENFILL</string>
    <string name="bloodPressureAmaryl">Amaryl</string>
    <string name="bloodPressureDiamicronMR">DIAMICRON MR</string>
    <string name="FCM_PREF">escope.esprit.escope.fcm_pref</string>
    <string name="dailyHealthCareGlucobay">Glucobay</string>
    <string name="dailyHealthCareGNCBurn60">GNC Burn 60</string>
    <string name="dailyHealthCareCalciumPluswithMagnesium">Calcium Plus® with Magnesium</string>
    <string name="dailyHealthCareBetaCarotene">Beta Carotene</string>
    <string name="dailyHealthCareADVANTEC">ADVANTEC</string>
    <string name="dailyHealthCareAscard">Ascard</string>
    <string name="dailyHealthCareLoprin">Loprin</string>
    <string name="dailyHealthCareCLENILNEBULISER">CLENIL NEBULISER</string>
    <string name="dailyHealthCareMontelukast">Montelukast</string>
    <string name="feverNuberolDescription">
        Nuberol is produced by SEARLE, which contains paracetamol + Orphenadrine Citrate, which is analgesic and muscle relaxant tablets.
        If you are facing fever certain pains in your body, you can use Nuberol and Nuberol forte as a remedy.
    </string>
    <string name="feverAspirinDescription">Aspirin is used to treat pain, and reduce fever or inflammation. It is sometimes used to treat or prevent heart attacks, strokes, and chest pain .
    </string>
    <string name="feverActironCFDescription">Actiron CF is produced by Murfi, which contains paracetamol + Caffeine + Chlorpheniramine Maleate (CPM).
        It is an effective remedy for pain, fever and cold.</string>
    <string name="feverAcetaminophenDescription">Acetaminophen is a non-opiate, analgesic and antipyretic, prescribed for headache, pain (muscle ache,
        backache) and fever either alone or combined with other medications.</string>
    <string name="feverPanadolDescription">Relieving mild to moderate pain such as headache, migraine, nerve pain toothache, sore throat, earache and
        rheumatic and muscular aches and pains. Relieving aches, pains, fever and discomfort </string>
    <string name="headacheProthiadenDescription">The active ingredient in Prothiaden is dosulepin hydrochloride. Prothiaden belongs to a group of medicines
        called tricyclic antidepressants. PROTHIADEN is used to treat depression and can also help reduce feelings of anxiety.</string>
    <string name="headacheDisprinDescription">The active ingredient in Prothiaden is dosulepin hydrochloride. Prothiaden belongs to a group of medicines called
        tricyclic antidepressants. PROTHIADEN is used to treat depression and can also help reduce feelings of anxiety.</string>
    <string name="headacheParacetamolDescription">The active ingredient in Prothiaden is dosulepin hydrochloride. Prothiaden belongs to a group of medicines called
        tricyclic antidepressants. PROTHIADEN is used to treat depression and can also help reduce feelings of anxiety.</string>
    <string name="headacheZolmitriptanDescription">The active ingredient in Prothiaden is dosulepin hydrochloride. Prothiaden belongs to a group of medicines called
        tricyclic antidepressants. PROTHIADEN is used to treat depression and can also help reduce feelings of anxiety.</string>
    <string name="headacheNaproxenDescription">Naproxen is a nonsteroidal anti-inflammatory drug(NSAID). It works by reducing headache and pain in the body.
        Naproxen is used to treatpain or inflammation caused by conditions such as arthritis.</string>
    <string name="coldAndCoughLefloxDescription">Treating infections caused by certain bacteria. It is also used to prevent or treat anthrax or plague in certain
        patients. Levofloxacin tablets are a quinolone antibiotic.</string>
    <string name="coldAndCoughCodeineDescription">Treating infections caused by certain bacteria. It is also used to prevent or treat anthrax or plague in certain
        patients. Levofloxacin tablets are a quinolone antibiotic.</string>
    <string name="coldAndCoughArinacDescription">Treating infections caused by certain bacteria. It is also used to prevent or treat anthrax or plague in certain patients.
        Levofloxacin tablets are a quinolone antibiotic.</string>
    <string name="coldAndCoughDextromethorphanDescription">Temporarily relieving cough due to the common cold, upper respiratory tract infections, sinus inflammation,
        sore throat, or bronchitis. Dextromethorphan chewable tablets are a cough suppressant.</string>
    <string name="coldAndCoughNoscapineDescription">Fluitussin is a cough medicine. The tablets contain the active ingredient noscapine, a medicine that has an antitussive
        (cough-suppressing) effect. Fluitussin should only be used to treat dry (tickly) coughs</string>
    <string name="vomitingDronabinolDescription"> Dronabinol causes many effects on your central nervous system. Dronabinol is used to treat loss of appetite in people with
        AIDS. It is also used to treat severe nausea and vomiting that is caused by cancer chemotherapy.</string>
    <string name="vomitingAprepitantDescription"> Aprepitant is used with other medications to help prevent nausea and vomitingcaused by cancer drug treatment (chemotherapy).
        This medication is also used to prevent nausea and vomiting after surgery.</string>
    <string name="vomitingDexamethasoneDescription"> Dexamethasone is a steroid that prevents the release of substances in the body that cause inflammation. </string>
    <string name="vomitingNabiloneDescription">Nabilone is used to treat severe nausea and vomiting caused by cancer chemotherapy. Nabilone is for use only when other
        medications have been unable to control the nausea and vomiting.</string>
    <string name="vomitingDroperidolDescription">Droperidol is used to reduce nausea and vomiting caused by surgery or other medical procedures. Droperidol may also be
        used for purposes not listed in this medication guide.</string>
    <string name="constipationBuscopanDescription">Buscopan is used to relieve colicky abdominal pain that is caused by painful spasms in the muscles of the gastro-intestinal
        (GI) or genito-urinary (GU) tract. Spasms of the stomach</string>
</resources>